--- a/package.json
+++ b/package.json
@@ -29,13 +29,20 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-ionic-webview": "^2.5.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.3",
     "firebase": "^5.7.2",
+    "fstream": "^1.0.12",
+    "handlebars": "^4.1.2",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
+    "lodash.mergewith": "^4.6.2",
     "rxjs": "6.2.2",
+    "tar": "^4.4.10",
+    "webpack-dev-server": "^3.8.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
