--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "lodash.mergewith": "^4.6.2",
+    "mixin-deep": "^1.3.2",
     "rxjs": "6.2.2",
+    "set-value": "^2.0.1",
     "tar": "^4.4.10",
     "webpack-dev-server": "^3.8.0",
     "zone.js": "^0.8.26"
